align header and menu items correctly

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -20,22 +20,28 @@
 
 .header {
   background-color: #393f4d;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .logo {
-  /* text-align: left; */
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
   display: grid;
-  grid-row: 1 / 1;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  white-space: nowrap;
 }
 
 .sidebar {
